# ucore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  jmp_bin.spec.md  jmp_bin.vectors.json  mkdocs.yml  prebuild.sh
.github/workflows/: ci-firmware.yml  ci.yml  docs.yml  release.yml
bridge/: jmp_converter.js  jmp_converter.test.js  jmp_wire.js  kernel.js  kernel.json  package.json  pyproject.toml  transport.js
bridge/ucore_kernel/: __main__.py  kernel.py  protocol.py  provisioner.py
components/ucore/: jmp_bin.c  jmp_bin.specs  mpy_bindings.c  ucore.c  utils.c
components/ucore/include/ucore/: jmp_bin.h  mpy_bindings.h  ucore.h
docs/: flash.md  getting-started.md  index.html  index.md  manifest.json  pipes.md  requirements.txt  skills.md  uagent.md
firmware/: .gitignore  CMakeLists.txt  README.md
firmware/boards/ESP32_GENERIC/: mpconfigboard.h
firmware/boards/ESP32_GENERIC_S3/: mpconfigboard.h
firmware/boards/UCORE_ESP32/: mpconfigboard.h
firmware/components/mpyruntime/: CMakeLists.txt
firmware/components/ucore/: CMakeLists.txt  jmp_bin.c  mpy_bindings.c  project.cmake  transport_uart.c  ucore.c  ucore.py.in
firmware/components/ucore/boards/ESP32_GENERIC/: board.md
firmware/components/ucore/boards/ESP32_GENERIC_S3/: board.md  mpconfigboard.cmake
firmware/components/ucore/include/ucore/: jmp_bin.h  mpconfig_ucore.h  mpy_bindings.h  transport_uart.h  ucore.h
firmware/components/ucore/test/: Makefile
firmware/main/: CMakeLists.txt  main.c
kernel/: .gitignore
kernel/components/mpyruntime/: CMakeLists.txt
kernel/components/ucore/: CMakeLists.txt  mpy_bindings.c  ucore.c
kernel/components/ucore/include/ucore/: auth.h  mpy_overrides.h  utils.h
kernel/components/ucore/test/: test_jmp_bin.c
kernel/main/: hal_esp32.c  idf_component.yml
kernel/ucore_kernel/: __init__.py
labextensions/device-manager/: .gitignore  package.json  pyproject.toml  tsconfig.json
labextensions/device-manager/src/: api.ts  icon.ts  index.ts  widget.ts
labextensions/device-manager/style/: index.css
labextensions/device-manager/ucore_device_manager/: __init__.py
labextensions/device-manager/ucore_device_manager/labextension/: build_log.json  install.json  package.json
labextensions/device-manager/ucore_device_manager/labextension/static/: lib_index_js.22ddeae618ee3c60fb9d.js  lib_index_js.22ddeae618ee3c60fb9d.js.map  remoteEntry.0a0dd12328450ed09ac8.js  remoteEntry.0a0dd12328450ed09ac8.js.map
main/: hal_esp32.c  hal_esp32.h  main.c
scripts/: dev-install.sh
uagent/: pyproject.toml
uagent/uagent/: __init__.py  __main__.py  acp_agent.py  agent.py  config.py  context.py  mcp_client.py  persona.py  tools.py
uagent/uagent/prompts/: system.txt
uagent/uagent/skills/: actuator_control.txt  data_bridge.txt  debugging.md  device_basics.md  index.yaml  peripherals.md  plotting.txt  sensor_reading.txt  streaming.md
ukernel/: pyproject.toml  ucore_pipes.py
ukernel/jupyter-config/jupyter_server_config.d/: ukernel.json
ukernel/kernel-spec/: kernel.json
ukernel/ukernel/: __main__.py  agent_client.py  devices.py  install.py  kernel.py  pipes.py  protocol.py  provisioner.py  server_extension.py  transport.py
