[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "uagent"
version = "0.1.0"
description = "AI agent for ucore — programs ESP32 devices through Jupyter notebooks"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.0",
    "pyyaml",
    "agent-client-protocol",
    "jupyter-ai-acp-client",
    "jupyter-ai-persona-manager",
    # Pulled transitively through jupyter-ai; the loose upstream pin
    # let pip resolve to 0.1.2 which has a message_cache KeyError that
    # crashes the kernel websocket. Pin to 0.2.0+ where that path was
    # rewritten.
    "jupyter-server-documents>=0.2.0",
]

[project.entry-points."jupyter_ai.personas"]
ucore-acp = "uagent.persona:UCorePersona"

[tool.setuptools]
packages = ["uagent"]

[tool.setuptools.package-data]
uagent = ["prompts/*.txt", "skills/*.md", "static/*.svg"]
