[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ukernel"
version = "0.1.0"
description = "Jupyter kernel for MicroPython on ESP32 via ucore"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.0",
    "jupyter-client>=8.0",
    "agent-client-protocol",
    "cobs",
    "pyserial",
    "ucore-device-manager",
]

[project.optional-dependencies]
websocket = ["websockets"]

[project.entry-points."jupyter_client.kernel_provisioners"]
ucore-provisioner = "ukernel.provisioner:UCoreProvisioner"

[tool.setuptools]
packages = ["ukernel"]

[tool.setuptools.data-files]
"etc/jupyter/jupyter_server_config.d" = ["jupyter-config/jupyter_server_config.d/ukernel.json"]
"share/jupyter/kernels/ucore" = [
    "kernel-spec/kernel.json",
    "kernel-spec/logo-32x32.png",
    "kernel-spec/logo-64x64.png",
]
