[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ucore-device-manager"
version = "0.1.0"
description = "Sidebar device manager JupyterLab extension for ucore"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["ucore_device_manager*"]

[tool.setuptools.package-data]
ucore_device_manager = ["labextension/**/*"]
