[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ucore-device-manager"
version = "0.1.0"
description = "Sidebar device manager JupyterLab extension for ucore"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["ucore_device_manager"]
exclude = ["ucore_device_manager/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"ucore_device_manager/labextension" = "share/jupyter/labextensions/@ucore/device-manager"
